# swift-api-service

./: .gitignore  .tool-versions  Dockerfile  Makefile  Package.resolved  Package.swift  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: integration.yml  schedule_app_runner_uptime.yml
Sources/App/: configure.swift  routes.swift
Sources/App/Models/: APIResponse.swift
Sources/Run/: main.swift
Tests/AppTests/: AppTests.swift
docker/: Dockerfile  local.Dockerfile
src/: application.py
terraform/: Makefile  aws_acm.tf  aws_app_runner.tf  aws_ecr.tf  aws_iam.tf  aws_route53.tf  github_secrets.tf  providers.tf  remote_state.tfvars  remote_state_live.tfvars  variables.tf
