[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Colin Tessarzick <colintessarzick@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
